[Common] Fix bug dark mode, line weight. Update favicon & logo

--- a/docs/.vuepress/styles/index.css
+++ b/docs/.vuepress/styles/index.css
@@ -48,3 +48,11 @@ a[target="_blank"]::after {
 .vp-toggle-color-mode-button :hover {
   color: var(--vp-c-accent);
 }
+
+.vp-footer {
+  background-color: var(--vp-navbar-c-bg);
+}
+
+.vp-home {
+  padding: 0;
+}
